# chatgpt-analysis

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
config/: analysis.example.json
docs/: architecture.md  worker-example.md
examples/: analysis-with-model-routing.json  taxonomy-with-hypotheses.json
prompts/: adjudication.md  reducer.md  review.md
schemas/: model-output.schema.json  task.schema.json  viewer-atlas.schema.json
scripts/: check_readme.py  sync_viewer.py
src/chatgpt_analysis/: __init__.py  adapters.py  cli.py  config.py  errors.py  models.py  pipeline.py  util.py  viewer.py  worker.py
src/chatgpt_analysis/templates/: analysis.json  taxonomy.json
src/chatgpt_analysis/templates/prompts/: adjudication.md  reducer.md  review.md  signals.md  triage.md
src/chatgpt_analysis/templates/schemas/: model-output.schema.json
src/chatgpt_analysis/viewer/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts
src/chatgpt_analysis/viewer/src/: main.tsx
src/chatgpt_analysis/viewer/src/app/: App.tsx  useAtlasData.ts  useAtlasRoute.ts
src/chatgpt_analysis/viewer/src/components/: AccessibleCharts.tsx  AtlasLayout.tsx  FilterPanel.tsx  LoadStates.tsx  OccurrenceEvidence.tsx  Presentation.tsx
src/chatgpt_analysis/viewer/src/data/: loadAtlas.ts
src/chatgpt_analysis/viewer/tests/: aggregations.test.ts  atlasFixture.ts  atlasParsing.test.ts  filtering.test.ts  urlState.test.ts
tests/: smoke_installed.py  test_adapters.py  test_distribution.py  test_pipeline.py  test_worker.py
tests/fixtures/official_export/: conversations.json
(+14 files in other folders)
